--- a/ApplicationFramework/Composition/Composition.csproj
+++ b/ApplicationFramework/Composition/Composition.csproj
@@ -26,7 +26,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\Assemblies\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;CODE_ANALYSIS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\Assemblies\JamesDibble.ApplicationFramework.Composition.XML</DocumentationFile>
