--- a/ApplicationFramework/Data/Persistence/Persistence.csproj
+++ b/ApplicationFramework/Data/Persistence/Persistence.csproj
@@ -62,6 +62,8 @@
     <Compile Include="PersistenceSearcher.cs" />
     <Compile Include="PropertyChangedBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeMapping\ITypeMappingDictionary.cs" />
+    <Compile Include="TypeMapping\TypeMappingDictionary.cs" />
     <Compile Include="UniqueObject.cs" />
   </ItemGroup>
   <ItemGroup>
